Ajustes para correção de bugs em testes